--- a/bosproject/templates/base.html
+++ b/bosproject/templates/base.html
@@ -9,7 +9,7 @@
 	<head>
 		<meta charset="UTF-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1" />
-		<link rel="shortcut icon" href="img/favicon.ico" type="image/x-icon" />
+		<link rel="shortcut icon" href='{% static "img/favicon.ico"%}' type="image/x-icon" />
 		
 		<title>{% block title %}Nimbus{% endblock title %}</title>
 
