--- a/static/css/custom.css
+++ b/static/css/custom.css
@@ -25,7 +25,6 @@ footer {
 ul li::before{
 	display: none!important;
 }
-
 .cmsms_button { 
 				font-weight:600!important; 
 				font-style:normal; 
@@ -49,7 +48,7 @@ ul li::before{
     
 }
 .cmsms_row_outer_parent {
-    padding-top: 80px;
+    padding-top: 40px;
 }
 .post .cmsms_post_header{
 display: flex;
@@ -59,3 +58,17 @@ padding-bottom: 40px;
 .post .cmsms_post_header h1{
     padding-left: 20px;
 }
+/*.blog.timeline .post{
+    opacity: 1;
+}*/
+.header_mid .header_mid_inner .logo_wrap {
+    width: 40%;
+}
+.header_mid_inner{
+	margin: 0;
+}
+
+div.about-us{
+background-color: #1b283e;
+}
+
