add many sliders

--- a/app/templates/partner_list.html
+++ b/app/templates/partner_list.html
@@ -6,7 +6,7 @@
 									<div class="cmsms_row_inner">
 										<div class="cmsms_row_margin">
 											<div class="cmsms_column one_first">
-												<h3 id="cmsms_heading_55544abfbd262" class="cmsms_heading cmsms_valid_title">Partners</h3>
+												<h3 id="cmsms_heading_55544abfbd262" class="cmsms_heading cmsms_valid_title"></h3>
 												<script type="text/javascript">
                                                     jQuery(document).ready(function (){
                                                         jQuery("#cmsms_clients_55544abfbd2fc").owlCarousel({
