change size texts

--- a/app/templates/activity_list.html
+++ b/app/templates/activity_list.html
@@ -46,7 +46,7 @@
 																</header>
 																
 																<div class="cmsms_post_content entry-content">
-																	{{act.description}}
+																	<h4>	{{act.description}}</h4>
 																</div>
 																
 																<div class="cl"></div>
