--- a/app/templates/member_list.html
+++ b/app/templates/member_list.html
@@ -11,7 +11,7 @@
 															</h3>
 															<h4 class="pl_subtitle">{{member.rol}}</h4>
 															<h5 class="pl_subtitle">{{member.email}}</h5>
-															<div class="entry-content">{{member.description}}</div>
+															<div class="entry-content"><h4>{{member.description}}</h4></div>
 														</div>
 														<div class="pl_img">
 															<figure>
